docs: expand Product Catalog runbook (7 incidents, impact map, rollback tree)